--- a/boonyang.html
+++ b/boonyang.html
@@ -27,7 +27,7 @@
           <div class="cont">
             <!-- 공지사항 list -->
 
-            <div class="lst-bbs">
+            <div class="lst-bbs inner">
               <h3 class="ir_text blind">분양단지 리스트</h3>
               <div class="category_list_inner">
                 <div class="new_grid_container">
@@ -301,7 +301,7 @@
                 <div class="page-num">
                   <div class="sub_content">
                     <div class="paging">
-                      <strong>1</strong>
+                      <strong title="현재 페이지">1</strong>
                       <a href="#">2</a>
                       <a href="#">3</a>
                       <a href="#">4</a>
@@ -320,7 +320,7 @@
           <h3 class="tit">분양캘린더</h3>
           <div class="cont">
             <!-- 썸네일 리스트 -->
-            <div class="lst-gallery">
+            <div class="lst-gallery inner">
               <div class="category_list_inner">
                 <div class="new_grid_container">
                   <div class="sub_title">
