--- a/index.html
+++ b/index.html
@@ -94,192 +94,72 @@
             <!-- nav -->
             <ul class="slider-nav">
               <li>
-                <img
-                  src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3270&q=80"
-                  alt=""
-                />
+                <div class="temp">
+                  <img
+                    src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3270&q=80"
+                    alt=""
+                  />
+                </div>
+
+                <div class="text">vtguyhfdctyxcyh</div>
               </li>
               <li>
-                <img
-                  src="https://images.unsplash.com/photo-1558211583-d26f610c1eb1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3412&q=80"
-                  alt=""
-                />
+                <div class="temp">
+                  <img
+                    src="https://images.unsplash.com/photo-1558211583-d26f610c1eb1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3412&q=80"
+                    alt=""
+                  />
+                </div>
+
+                <div class="text">vtguyhfdctyxcyh</div>
               </li>
               <li>
-                <img
-                  src="https://images.unsplash.com/photo-1630581630833-27c2b470e9cc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3396&q=80"
-                  alt=""
-                />
+                <div class="temp">
+                  <img
+                    src="https://images.unsplash.com/photo-1630581630833-27c2b470e9cc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3396&q=80"
+                    alt=""
+                  />
+                </div>
+
+                <div class="text">vtguyhfdctyxcyh</div>
               </li>
             </ul>
           </div>
           <!-- slide -->
           <div class="slider-for">
             <div>
-              <img
-                src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3270&q=80"
-                alt=""
-              />
+              <div class="temp">
+                <img
+                  src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3270&q=80"
+                  alt=""
+                />
+              </div>
+
+              <div class="text">vtguyhfdctyxcyh</div>
             </div>
             <div>
-              <img
-                src="https://images.unsplash.com/photo-1558211583-d26f610c1eb1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3412&q=80"
-                alt=""
-              />
+              <div class="temp">
+                <img
+                  src="https://images.unsplash.com/photo-1558211583-d26f610c1eb1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3412&q=80"
+                  alt=""
+                />
+              </div>
+
+              <div class="text">vtguyhfdctyxcyh</div>
             </div>
             <div>
-              <img
-                src="https://images.unsplash.com/photo-1630581630833-27c2b470e9cc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3396&q=80"
-                alt=""
-              />
+              <div class="temp">
+                <img
+                  src="https://images.unsplash.com/photo-1630581630833-27c2b470e9cc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3396&q=80"
+                  alt=""
+                />
+              </div>
+
+              <div class="text">vtguyhfdctyxcyh</div>
             </div>
           </div>
         </section>
-        <script>
-          $(".slider-for").slick({
-            slidesToShow: 1,
-            slidesToScroll: 1,
-            arrows: false,
-            fade: true,
-            asNavFor: ".slider-nav",
-          });
-          $(".slider-nav").slick({
-            slidesToShow: 1,
-            slidesToScroll: 1,
-            asNavFor: ".slider-for",
-            dots: true,
-            centerMode: true,
-            centerPadding: "20px",
-            focusOnSelect: true,
-          });
-        </script>
 
-        <!-- <section class="sec-slide">
-          <div class="slide-intro">
-            <section
-              id="image-carousel"
-              class="splide"
-              aria-label="Beautiful Images"
-            >
-              <div class="splide__track">
-                <ul class="splide__list">
-                  <li class="splide__slide">
-                    <img src="./images/comm/box_btn_img2.png" alt="" />
-                  </li>
-                  <li class="splide__slide">
-                    <img src="./images/comm/box_btn_img4.png" alt="" />
-                  </li>
-                  <li class="splide__slide">
-                    <img src="./images/comm/box_btn_img3.png" alt="" />
-                  </li>
-                </ul>
-              </div>
-            </section>
-          </div>
-        </section> -->
-        <!-- <section id="sectionPin">
-            <span
-              >Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </span>
-            <div class="pin-wrap">
-              <div class="slide-box">
-                <img
-                  src="https://images.pexels.com/photos/5207262/pexels-photo-5207262.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=900"
-                  alt=""
-                />
-                <div class="txt">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Aliquam eius officiis odio, voluptate sed totam distinctio
-                  odit culpa quos perferendis commodi? Nihil fugit quisquam nemo
-                  harum doloribus perferendis adipisci maxime?
-                </div>
-              </div>
-              <div class="slide-box">
-                <img
-                  src="https://images.pexels.com/photos/5207262/pexels-photo-5207262.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=900"
-                  alt=""
-                />
-                <div class="txt">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Aliquam eius officiis odio, voluptate sed totam distinctio
-                  odit culpa quos perferendis commodi? Nihil fugit quisquam nemo
-                  harum doloribus perferendis adipisci maxime?
-                </div>
-              </div>
-              <div class="slide-box">
-                <img
-                  src="https://images.pexels.com/photos/5207262/pexels-photo-5207262.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=900"
-                  alt=""
-                />
-                <div class="txt">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Aliquam eius officiis odio, voluptate sed totam distinctio
-                  odit culpa quos perferendis commodi? Nihil fugit quisquam nemo
-                  harum doloribus perferendis adipisci maxime?
-                </div>
-              </div>
-              <div class="slide-box">
-                <img
-                  src="https://images.pexels.com/photos/5207262/pexels-photo-5207262.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=900"
-                  alt=""
-                />
-                <div class="txt">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Aliquam eius officiis odio, voluptate sed totam distinctio
-                  odit culpa quos perferendis commodi? Nihil fugit quisquam nemo
-                  harum doloribus perferendis adipisci maxime?
-                </div>
-              </div>
-              <div class="slide-box">
-                <img
-                  src="https://images.pexels.com/photos/5207262/pexels-photo-5207262.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=900"
-                  alt=""
-                />
-                <div class="txt">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Aliquam eius officiis odio, voluptate sed totam distinctio
-                  odit culpa quos perferendis commodi? Nihil fugit quisquam nemo
-                  harum doloribus perferendis adipisci maxime?
-                </div>
-              </div>
-              <div class="slide-box">
-                <img
-                  src="https://images.pexels.com/photos/5207262/pexels-photo-5207262.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=900"
-                  alt=""
-                />
-                <div class="txt">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Aliquam eius officiis odio, voluptate sed totam distinctio
-                  odit culpa quos perferendis commodi? Nihil fugit quisquam nemo
-                  harum doloribus perferendis adipisci maxime?
-                </div>
-              </div>
-              <div class="slide-box">
-                <img
-                  src="https://images.pexels.com/photos/5207262/pexels-photo-5207262.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=900"
-                  alt=""
-                />
-                <div class="txt">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Aliquam eius officiis odio, voluptate sed totam distinctio
-                  odit culpa quos perferendis commodi? Nihil fugit quisquam nemo
-                  harum doloribus perferendis adipisci maxime?
-                </div>
-              </div>
-              <div class="slide-box">
-                <img
-                  src="https://images.pexels.com/photos/5207262/pexels-photo-5207262.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=900"
-                  alt=""
-                />
-                <div class="txt">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Aliquam eius officiis odio, voluptate sed totam distinctio
-                  odit culpa quos perferendis commodi? Nihil fugit quisquam nemo
-                  harum doloribus perferendis adipisci maxime?
-                </div>
-              </div>
-            </div>
-          </section> -->
         <section class="sub-container">
           <section class="brand">
             <div class="left">
@@ -310,7 +190,7 @@
                       </div>
                       <div class="area-bg">
                         <img
-                          src="./images/comm/brand_img0.png"
+                          src="./images/comm/main_img/jason-wang-5MG8cQbw-T8-unsplash.jpg"
                           alt="브랜드 스토리 바로가기 배경 이미지"
                         />
                       </div>
@@ -329,7 +209,7 @@
                       </div>
                       <div class="area-bg">
                         <img
-                          src="./images/comm/brand_img1.png"
+                          src="./images/comm/main_img/roberto-nickson-rEJxpBskj3Q-unsplash.jpg"
                           alt="브랜드 아이덴티티 바로가기 배경 이미지"
                         />
                       </div>
@@ -356,30 +236,34 @@
             <ul class="four-active">
               <li>
                 <a href="#"
-                  ><img src="./images/comm/m_sub_visual02.png" alt="" /><span
-                    >A/S 신청</span
-                  ></a
+                  ><img
+                    src="./images/comm/main_img/jean-philippe-delberghe-oEqORBIuTS8-unsplash.jpg"
+                    alt=""
+                  /><span>분양 단지</span></a
                 >
               </li>
               <li>
                 <a href="#"
-                  ><img src="./images/comm/m_sub_visual02.png" alt="" /><span
-                    >A/S 신청</span
-                  ></a
+                  ><img
+                    src="./images/comm/main_img/r-architecture-wDDfbanbhl8-unsplash.jpg"
+                    alt=""
+                  /><span>납부 조회</span></a
                 >
               </li>
               <li>
                 <a href="#"
-                  ><img src="./images/comm/brand_img3.png" alt="" /><span
-                    >A/S 신청</span
-                  ></a
+                  ><img
+                    src="./images/comm/main_img/liana-mikah-SCMgehsezIo-unsplash.jpg"
+                    alt=""
+                  /><span>A/S 신청</span></a
                 >
               </li>
               <li>
                 <a href="#"
-                  ><img src="./images/comm/m_sub_visual02.png" alt="" /><span
-                    >A/S 신청</span
-                  ></a
+                  ><img
+                    src="./images/comm/main_img/prudence-earl-NwBx723XaHw-unsplash.jpg"
+                    alt=""
+                  /><span>고객 문의</span></a
                 >
               </li>
             </ul>
