--- a/boonyang.html
+++ b/boonyang.html
@@ -387,7 +387,7 @@
                           </div>
                           <div class="c2">
                             <p>
-                              <i class="type2"> 분양중 </i>
+                              <i class="type1"> 분양중 </i>
                               <b class="">
                                 <!-- [D] 0930 : 데이터 없을시 클래스 no-data 추가 -->
 
@@ -425,7 +425,7 @@
                           </div>
                           <div class="c2">
                             <p>
-                              <i2 class="type2"> 분양예정 </i2>
+                              <i class="type2"> 분양예정 </i>
                               <b class="">
                                 <!-- [D] 0930 : 데이터 없을시 클래스 no-data 추가 -->
 
@@ -445,7 +445,7 @@
                           </div>
                           <div class="c2">
                             <p>
-                              <i2 class="type2"> 분양예정 </i2>
+                              <i class="type2"> 분양예정 </i>
                               <b class="">
                                 <!-- [D] 0930 : 데이터 없을시 클래스 no-data 추가 -->
 
@@ -455,7 +455,7 @@
                               </b>
                             </p>
                             <p>
-                              <i2 class="type2"> 분양예정 </i2>
+                              <i class="type2"> 분양예정 </i>
                               <b class="">
                                 <!-- [D] 0930 : 데이터 없을시 클래스 no-data 추가 -->
 
@@ -465,7 +465,7 @@
                               </b>
                             </p>
                             <p>
-                              <i2 class="type2"> 분양예정 </i2>
+                              <i class="type2"> 분양예정 </i>
                               <b class="">
                                 <!-- [D] 0930 : 데이터 없을시 클래스 no-data 추가 -->
 
@@ -485,7 +485,7 @@
                           </div>
                           <div class="c2">
                             <p>
-                              <i2 class="type2"> 분양예정 </i2>
+                              <i class="type2"> 분양예정 </i>
                               <b class="">
                                 <!-- [D] 0930 : 데이터 없을시 클래스 no-data 추가 -->
 
