--- a/index.html
+++ b/index.html
@@ -78,16 +78,13 @@
 
       <!-- </section> -->
       <div class="main-video">
-        <div class="inner">
-          <video autoplay muted loop>
-            <source
-              src="./images/video/pexels_videos_2108274 (1080p).mp4"
-              type="video/mp4"
-            />
-          </video>
-        </div>
+        <video autoplay muted loop>
+          <source
+            src="./images/video/pexels_videos_2108274 (1080p).mp4"
+            type="video/mp4"
+          />
+        </video>
       </div>
-      <br /><br />
       <main id="main">
         <section class="sec-calendar">
           <div class="nav-wrap">
@@ -101,7 +98,25 @@
                   />
                 </div>
 
-                <div class="text">vtguyhfdctyxcyh</div>
+                <div class="text">
+                  <a href="#">
+                    <strong class="upper"> 고양시 주교동 오피스텔 </strong>
+                    <div class="desc">
+                      <dl>
+                        <dt>위치</dt>
+                        <dd>경기도 고양시 덕양구 주교동 612</dd>
+                      </dl>
+                      <dl>
+                        <dt>세대수</dt>
+                        <dd>197세대</dd>
+                      </dl>
+                      <dl>
+                        <dt>분양시기</dt>
+                        <dd>2022년10월</dd>
+                      </dl>
+                    </div>
+                  </a>
+                </div>
               </li>
               <li>
                 <div class="temp">
@@ -111,7 +126,25 @@
                   />
                 </div>
 
-                <div class="text">vtguyhfdctyxcyh</div>
+                <div class="text">
+                  <a href="#">
+                    <strong class="upper"> 고양시 주교동 오피스텔 </strong>
+                    <div class="desc">
+                      <dl>
+                        <dt>위치</dt>
+                        <dd>경기도 고양시 덕양구 주교동 612</dd>
+                      </dl>
+                      <dl>
+                        <dt>세대수</dt>
+                        <dd>197세대</dd>
+                      </dl>
+                      <dl>
+                        <dt>분양시기</dt>
+                        <dd>2022년10월</dd>
+                      </dl>
+                    </div>
+                  </a>
+                </div>
               </li>
               <li>
                 <div class="temp">
@@ -121,7 +154,25 @@
                   />
                 </div>
 
-                <div class="text">vtguyhfdctyxcyh</div>
+                <div class="text">
+                  <a href="#">
+                    <strong class="upper"> 고양시 주교동 오피스텔 </strong>
+                    <div class="desc">
+                      <dl>
+                        <dt>위치</dt>
+                        <dd>경기도 고양시 덕양구 주교동 612</dd>
+                      </dl>
+                      <dl>
+                        <dt>세대수</dt>
+                        <dd>197세대</dd>
+                      </dl>
+                      <dl>
+                        <dt>분양시기</dt>
+                        <dd>2022년10월</dd>
+                      </dl>
+                    </div>
+                  </a>
+                </div>
               </li>
             </ul>
           </div>
@@ -134,8 +185,6 @@
                   alt=""
                 />
               </div>
-
-              <div class="text">vtguyhfdctyxcyh</div>
             </div>
             <div>
               <div class="temp">
@@ -144,8 +193,6 @@
                   alt=""
                 />
               </div>
-
-              <div class="text">vtguyhfdctyxcyh</div>
             </div>
             <div>
               <div class="temp">
@@ -154,14 +201,12 @@
                   alt=""
                 />
               </div>
-
-              <div class="text">vtguyhfdctyxcyh</div>
             </div>
           </div>
         </section>
 
         <section class="sub-container">
-          <section class="brand">
+          <div class="brand">
             <div class="left">
               <div class="desc">
                 <h2>ENHANCE YOUR LIFE</h2>
@@ -218,6 +263,7 @@
                 </li>
               </ul>
             </div>
+
             <div class="bg">
               <div>
                 <video width="1920" autoplay muted loop>
@@ -229,44 +275,46 @@
                 <!-- <img src="/resources/web/images/main-bg-cover.png" alt=""> -->
               </div>
             </div>
-          </section>
+          </div>
         </section>
-        <section class="four-sec">
-          <div class="img-box">
-            <ul class="four-active">
-              <li>
-                <a href="#"
-                  ><img
-                    src="./images/comm/main_img/jean-philippe-delberghe-oEqORBIuTS8-unsplash.jpg"
-                    alt=""
-                  /><span>분양 단지</span></a
-                >
-              </li>
-              <li>
-                <a href="#"
-                  ><img
-                    src="./images/comm/main_img/r-architecture-wDDfbanbhl8-unsplash.jpg"
-                    alt=""
-                  /><span>납부 조회</span></a
-                >
-              </li>
-              <li>
-                <a href="#"
-                  ><img
-                    src="./images/comm/main_img/liana-mikah-SCMgehsezIo-unsplash.jpg"
-                    alt=""
-                  /><span>A/S 신청</span></a
-                >
-              </li>
-              <li>
-                <a href="#"
-                  ><img
-                    src="./images/comm/main_img/prudence-earl-NwBx723XaHw-unsplash.jpg"
-                    alt=""
-                  /><span>고객 문의</span></a
-                >
-              </li>
-            </ul>
+        <section class="sec-goto">
+          <div class="inner">
+            <div class="img-box">
+              <ul class="four-active">
+                <li>
+                  <a href="#"
+                    ><img
+                      src="./images/comm/main_img/jean-philippe-delberghe-oEqORBIuTS8-unsplash.jpg"
+                      alt=""
+                    /><span>분양 단지</span></a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      src="./images/comm/main_img/r-architecture-wDDfbanbhl8-unsplash.jpg"
+                      alt=""
+                    /><span>납부 조회</span></a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      src="./images/comm/main_img/liana-mikah-SCMgehsezIo-unsplash.jpg"
+                      alt=""
+                    /><span>A/S 신청</span></a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><img
+                      src="./images/comm/main_img/prudence-earl-NwBx723XaHw-unsplash.jpg"
+                      alt=""
+                    /><span>고객 문의</span></a
+                  >
+                </li>
+              </ul>
+            </div>
           </div>
         </section>
       </main>
