--- a/boonyang.html
+++ b/boonyang.html
@@ -27,7 +27,7 @@
           <div class="cont">
             <!-- 공지사항 list -->
 
-            <div class="lst-bbs inner">
+            <div class="lst-bbs">
               <h3 class="ir_text blind">분양단지 리스트</h3>
               <div class="category_list_inner">
                 <div class="new_grid_container">
@@ -320,7 +320,7 @@
           <h3 class="tit">분양캘린더</h3>
           <div class="cont">
             <!-- 썸네일 리스트 -->
-            <div class="lst-gallery inner">
+            <div class="lst-gallery">
               <div class="category_list_inner">
                 <div class="new_grid_container">
                   <div class="sub_title">
