--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Round"
       rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Round"
     />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -79,10 +80,7 @@
       <!-- </section> -->
       <div class="main-video">
         <video autoplay muted loop>
-          <source
-            src="./images/video/pexels_videos_2108274 (1080p).mp4"
-            type="video/mp4"
-          />
+          <source src="./images/video/pexels_videos_2108274%20(1080p).mp4" />
         </video>
       </div>
       <main id="main">
@@ -267,10 +265,7 @@
             <div class="bg">
               <div>
                 <video width="1920" autoplay muted loop>
-                  <source
-                    src="./images/video/video (1080p).mp4"
-                    type="video/mp4"
-                  />
+                  <source src="./images/video/video%20(1080p).mp4" />
                 </video>
                 <!-- <img src="/resources/web/images/main-bg-cover.png" alt=""> -->
               </div>
